<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/register"/>

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:minHeight="48dp"
        android:padding="12dp"
        android:importantForAutofill="yes" />

    <com.example.mystory.helper.EmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:importantForAutofill="yes" />

    <com.example.mystory.helper.PasswordEditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:padding="12dp"
        android:importantForAutofill="yes" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:transitionName="registerButton"/>
</LinearLayout>
