<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:elevation="5dp"
            android:background="@color/blue_dark">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back_btn"
                android:padding="16dp"
                app:tint="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_story"
            android:layout_below="@id/appBarLayout"
            android:padding="16dp"
            android:transitionName="storyImage" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_detail_photo"
            android:text="@string/story_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story_description"
            android:layout_below="@id/tv_detail_name"
            android:textSize="16sp"
            android:padding="16dp"
            android:textColor="@color/text" />

    </RelativeLayout>
</ScrollView>
